samples/_failures_safe/1761710373_e28673_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_beee7f3b.c: In function ‘main’:
./samples/SAFE/__tmp_beee7f3b.c:163:9: error: expected expression at end of input
  163 |         'H', 'e', 'l', 'l', 'o', ' ', 'W', 'o',
      |         ^~~
./samples/SAFE/__tmp_beee7f3b.c:163:9: error: expected declaration or statement at end of input
